syntax = "proto3";

package food;


message Food {
  string id = 1;
  string title = 2;
  string description = 3;

}



message GetFoodRequest {
  string food_id = 1;
}

message GetFoodResponse {
  Food food = 1;
}

message SearchFoodsRequest {
  string query = 1;
}

message SearchFoodsResponse {
  repeated Food foods = 1;
}

message CreateFoodRequest {
  string food_id = 1;
  string title = 2;
  string description = 3;
}

message CreateFoodResponse {
  Food food = 1;
}

service FoodService {
  rpc GetFood(GetFoodRequest) returns (GetFoodResponse);
  rpc SearchFoods(SearchFoodsRequest) returns (SearchFoodsResponse);
  rpc CreateFood(CreateFoodRequest) returns (CreateFoodResponse);
}